Fix horizontal spacing on logged out my feed page #1045

--- a/src/logged-in-home-page/_index.scss
+++ b/src/logged-in-home-page/_index.scss
@@ -3,6 +3,10 @@
 @use '../sass/card';
 @use '../sass/layout';
 
+.logged-in-home-page-cta {
+  @include layout.basic-horizontal-spacing();
+}
+
 .logged-in-home-page-feed-container h2 {
   margin-left: 1rem;
   margin-right: 1rem;
